# GameOfLife

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: game.h  main.h  map.h  queue.h
src/: game.c  main.c  map.c  queue.c
